--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -173,7 +173,7 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_PROFILING=y
-CONFIG_HAVE_OPROFILE=y
+# CONFIG_HAVE_OPROFILE is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_KPROBES=y
@@ -197,9 +197,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 # CONFIG_SLABINFO is not set
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -1428,7 +1426,7 @@ CONFIG_WCNSS_CORE=y
 # Input device support
 #
 CONFIG_INPUT=y
-CONFIG_INPUT_FF_MEMLESS=m
+CONFIG_INPUT_FF_MEMLESS=y
 # CONFIG_INPUT_POLLDEV is not set
 # CONFIG_INPUT_SPARSEKMAP is not set
 
@@ -1470,7 +1468,7 @@ CONFIG_KEYBOARD_PMIC8XXX=y
 # CONFIG_KEYBOARD_QCIKBD is not set
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
-CONFIG_JOYSTICK_XPAD=m
+CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_INPUT_TABLET is not set
@@ -2424,8 +2422,8 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_CHICONY is not set
 # CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_CYPRESS is not set
-CONFIG_HID_DRAGONRISE=m
-CONFIG_DRAGONRISE_FF=y
+# CONFIG_HID_DRAGONRISE is not set
+# CONFIG_HID_EMS_FF is not set
 # CONFIG_HID_ELECOM is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
@@ -2437,11 +2435,7 @@ CONFIG_DRAGONRISE_FF=y
 # CONFIG_HID_TWINHAN is not set
 # CONFIG_HID_KENSINGTON is not set
 # CONFIG_HID_LCPOWER is not set
-CONFIG_HID_LOGITECH=m
-CONFIG_LOGITECH_FF=y
-CONFIG_LOGIRUMBLEPAD2_FF=y
-CONFIG_LOGIG940_FF=y
-CONFIG_LOGIWHEELS_FF=y
+# CONFIG_HID_LOGITECH is not set
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
@@ -3045,7 +3039,7 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=m
+CONFIG_CIFS=y
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
 CONFIG_CIFS_XATTR=y
@@ -3330,4 +3324,3 @@ CONFIG_DOUBLETAP_WAKE=y
 CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_PARTIALRESUME=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_RESTRICT_ROOTFS_SLAVE=y
