--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -3320,6 +3320,6 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
-CONFIG_DEDUCE_WAKEUP_REASONS=y
-CONFIG_PARTIALRESUME=y
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+# CONFIG_PARTIALRESUME is not set
 CONFIG_FORCE_FAST_CHARGE=y
