--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -240,11 +240,11 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_BFQ is not set
+CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_ZEN=y
-CONFIG_DEFAULT_IOSCHED="zen"
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_IOSCHED="bfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
