--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -719,6 +719,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -730,6 +731,7 @@ CONFIG_CPU_FREQ_GOV_HELLSACTIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 
 
 #
