--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -2954,7 +2954,7 @@ CONFIG_IOMMU_PGTABLES_L2=y
 #
 # File systems
 #
-# CONFIG_DCACHE_WORD_ACCESS is not set
+CONFIG_DCACHE_WORD_ACCESS=y
 CONFIG_EXT2_FS=y
 # CONFIG_EXT2_FS_XATTR is not set
 # CONFIG_EXT2_FS_XIP is not set
@@ -3095,6 +3095,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
+CONFIG_AIO_OPTIMIZATION=y
 
 #
 # Kernel hacking
