--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -1278,7 +1278,7 @@ CONFIG_SCSI_PROC_FS=y
 #
 # SCSI support type (disk, tape, CD-ROM)
 #
-# CONFIG_BLK_DEV_SD is not set
+## CONFIG_BLK_DEV_SD is not set
 # CONFIG_CHR_DEV_ST is not set
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
