--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -3338,3 +3338,5 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
+CONFIG_DEDUCE_WAKEUP_REASONS=y
+CONFIG_PARTIALRESUME=y
