--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -3151,6 +3151,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_ARM_UNWIND is not set
 # CONFIG_DEBUG_USER is not set
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 
 #
 # Security options
